--- a/composer.json
+++ b/composer.json
@@ -2175,5 +2175,9 @@
         "php": "^7.4 || ^8.0"
     },
     "platform-dev": [],
-    "plugin-api-version": "2.3.0"
+    "plugin-api-version": "2.3.0",
+    "require": {
+        "tecnickcom/tcpdf": "^6.6",
+        "dompdf/dompdf": "^2.0"
+    }
 }
